--- a/pricing/plan.html
+++ b/pricing/plan.html
@@ -124,7 +124,7 @@
                                 <ul class="sub-menu">
                                     <li><a href="../index-1.htm?theme=one">Homepage V1</a></li>
                                     <li><a href="../index-2.htm?theme=two">Homepage V2</a></li>
-                                    <li><a href="../index-3.htm?theme=three">Homepage V3</a></li>
+                                    <li><a href="../index.htm?theme=three">Homepage V3</a></li>
                                 </ul>
                             </li>
                             
@@ -215,7 +215,7 @@
 														<ul class="sub-menu">
 															<li><a href="../index-1.htm?theme=one">Homepage V1</a></li>
 															<li><a href="../index-2.htm?theme=two">Homepage V2</a></li>
-															<li><a href="../index-3.htm?theme=three">Homepage V3</a></li>
+															<li><a href="../index.htm?theme=three">Homepage V3</a></li>
 														</ul>
 													</li>
                                                     
