update to login_

--- a/login.html
+++ b/login.html
@@ -119,9 +119,9 @@
 
                                                         <li class="menu-item-has-children active"><a href="index-1.htm?theme=one">Home</a>
                                 <ul class="sub-menu">
-                                    <li><a href="index-1.htm?theme=one">Homepage V1</a></li>
-                                    <li><a href="index-2.htm?theme=two">Homepage V2</a></li>
-                                    <li><a href="index.htm?theme=three">Homepage V3</a></li>
+                                    <!-- <li><a href="index-1.htm?theme=one">Homepage V1</a></li>
+                                    <li><a href="index-2.htm?theme=two">Homepage V2</a></li> -->
+                                    <li><a href="index.htm?theme=three">Homepage</a></li>
                                 </ul>
                             </li>
                             
@@ -210,9 +210,9 @@
 												<ul class="nav-menu menu navigation list-none">
                                                     													<li class="menu-item-has-children"><a href="index-1.htm?theme=one">Home</a>
 														<ul class="sub-menu">
-															<li><a href="index-1.htm?theme=one">Homepage V1</a></li>
-															<li><a href="index-2.htm?theme=two">Homepage V2</a></li>
-															<li><a href="index.htm?theme=three">Homepage V3</a></li>
+															<!-- <li><a href="index-1.htm?theme=one">Homepage V1</a></li>
+															<li><a href="index-2.htm?theme=two">Homepage V2</a></li> -->
+															<li><a href="index.htm?theme=three">Homepage </a></li>
 														</ul>
 													</li>
                                                     
@@ -323,7 +323,7 @@
                                 <div class="inflanar-signin__header mg-btm-10">
                                     <div class="inflanar-signin__heading">
                                         <h4 class="inflanar-signin__title">Login</h4>
-                                        <p class="inflanar-signin__tag">Welcome to Inflanar</p>
+                                        <p class="inflanar-signin__tag">Welcome to Enfluensa</p>
                                     </div>
                                     <div class="inflanar-signin__heading__options">
                                         <!--Tab Nav -->
